# cmake-examples

./: .cmake-format.yaml  .gitattributes  .gitignore  HISTORY.md  LICENSE  README.md  run-cmake-format.bat
application/: CMakeLists.txt  main.cpp
examples/: README.md
examples/core/: README.md
examples/core/header-only/application/: CMakeLists.txt  configure.sh  main.cpp
examples/core/shared-export/application/: CMakeLists.txt  configure.bat  main.cpp
examples/core/shared/application/: CMakeLists.txt  build.bat  build.sh  configure.bat  configure.sh  main.cpp
examples/core/static/application/: CMakeLists.txt
examples/dynamic/application/: CMakeLists.txt  main.cpp
examples/header-only/application/: CMakeLists.txt  main.cpp
examples/more/components/: README.md
examples/more/components/application/: CMakeLists.txt  build.bat  build.sh  configure.bat  configure.sh  main.cpp
examples/more/external-project-add/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  configure.bat  configure.sh  main.cpp
examples/more/external-project-add/cmake/: Catch2_External.cmake  Rapidjson_External.cmake  Restbed_External.cmake
examples/more/fetch-content/: CMakeLists.txt  README.md  configure.bat  configure.sh  main.cpp
examples/more/find-module/: README.md
examples/more/find-module/application/: CMakeLists.txt  configure.bat  configure.sh  main.cpp
examples/more/find-module/cmake/: Findcalculator-static.cmake
examples/more/header-only-defines/: README.md
examples/more/header-only-defines/application/: CMakeLists.txt  main.cpp
examples/more/nested-dependencies/: README.md
examples/more/nested-dependencies/application/: CMakeLists.txt  configure-build.bat  configure-build.sh  main.cpp
examples/more/static-auto-install/: README.md
examples/more/static-auto-install/application/: CMakeLists.txt
examples/more/static-versioned/application-1.0.0/: CMakeLists.txt  configure.bat  configure.sh
examples/more/static-versioned/application-2.0.0/: CMakeLists.txt  configure.bat  configure.sh  main.cpp
examples/more/static-versioned/library-1.0.0/: CMakeLists.txt  configure.bat  configure.sh  install.sh
examples/more/static-versioned/library-1.0.0/src/: calculator.cpp  writer.cpp
examples/more/static-versioned/library-2.0.0/: CMakeLists.txt
examples/more/static-versioned/library-2.0.0/include/useless/: writer.h
examples/more/static-versioned/library-2.0.0/src/: calculator.cpp  writer.cpp
examples/more/superbuild/: .clang-format  CMakeLists.txt  README.md  configure.bat  configure.sh  main.cpp  superbuild.cmake
examples/shared-export/application/: CMakeLists.txt  main.cpp
examples/static-auto-install/application/: CMakeLists.txt  autoinstall.cmake  main.cpp
examples/static-versioned/: README.md
examples/static-versioned/application/: CMakeLists.txt  main.cpp
examples/static-versioned/application-1.0.0/: CMakeLists.txt  main.cpp
examples/static-versioned/library-1.0.0/: CMakeLists.txt
examples/static-versioned/library-1.0.0/include/: calculator.h  writer.h
examples/static-versioned/library-1.0.0/src/: calculator.cpp  writer.cpp
examples/static-versioned/library-2.0.0/: CMakeLists.txt
examples/static-versioned/library-2.0.0/include/: calculator.h
examples/static-versioned/library-2.0.0/src/: calculator.cpp
examples/static/application/: main.cpp
header-only/application/: CMakeLists.txt
installing/: README.md
static/application/: CMakeLists.txt  main.cpp
utils/: autoinstall.cmake
